--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@huggingface/inference": "^2.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7"
   },
   "author": "",
